--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ log = "0.4.14"
 flexi_logger = "0.18.0"
 actix-web = "4.0.0-beta.8"
 systemd-socket-activation = { git = "https://github.com/aQaTL/systemd-socket-activation", rev = "a80c15060a07830483f1290f7ef4b8543f97d43b" }
+futures = "0.3.15"
+tokio = { version = "1.8.2", features = ["sync", "rt"] }
 
 [build-dependencies]
 bindgen = "0.58.1"
