Move sane bindings into a separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,4 @@ futures = "0.3.15"
 tokio = { version = "1.8.2", features = ["sync", "rt"] }
 bitflags = "1.2.1"
 
-[build-dependencies]
-bindgen = "0.59.0"
-convert_case = "0.4.0"
+sane-scan = { path = "../sane-scan" }
