--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxt/http": "^0.6.4",
     "balm-ui": "^8.40.4",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.8"
